one more fix for header in dark mode

--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,6 @@ header {
 	justify-content: center;
 	line-height: 1.5;
 	background: var(--header-bg);
-	background-size: 0;
 	backdrop-filter: blur(8px);
 	opacity: 0.95;
 	z-index: 100;
@@ -269,6 +268,10 @@ h3 {
 }
 .sun-icon {
 	opacity: 1;
+}
+
+body.dark-theme header {
+	background-size: 100%;
 }
 
 body.dark-theme .toggle-thumb {
@@ -780,8 +783,8 @@ footer {
 /**************/
 
 .appear {
-	-webkit-transition: all 0.8s ease-in-out;
-	transition: all 0.8s ease-in-out;
+	-webkit-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	opacity: 0;
 }
 
